# logpipe

./: .gitignore  AwsLogWriter.cpp  AwsLogWriter.h  CMakeLists.txt  EventQueue.cpp  EventQueue.h  LogReader.cpp  LogReader.h  LogWriter.h  README.md  build-docker.sh  main.cpp
docker/: Dockerfile  build.sh
src/: AwsLogWriter.cpp  AwsLogWriter.h  ConsoleLogWriter.cpp  ConsoleLogWriter.h  EventQueue.cpp  LogReader.cpp  LogReader.h  LogWriter.h  main.cpp
